changed letter-spacing on text, and fixed btn position

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -46,6 +46,7 @@ body {
 		margin: 1.1em 0;
 		color: $light-cyan;
 		font-size: 2.4rem;
+		letter-spacing: -0.1px;
 
 		span {
 			font-size: inherit;
@@ -59,8 +60,8 @@ body {
 	&__dice {
 		position: absolute;
 		left: 50%;
-		bottom: -9.5%;
-		transform: translateX(-50%);
+		bottom: 0%;
+		transform: translate(-50%, 50%);
 		display: flex;
 		justify-content: center;
 		align-items: center;
